# fortran-tooling

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  .vale.ini  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  doxygen-home.md  ford-home.md  fpm.toml  github-home.md  index.md  pyproject.toml  requirements.txt
.github/workflows/: linting.yaml  pages.yaml
debugging/: README.md  index.md  mdb.md
docs/: .gitignore  Gemfile  _config.yml  index.md  template.md
docs/doxygen/: Doxyfile  format_markdown_for_doxygen.sh
documentation/: README.md  README.md~  doxygen.md  ford.md  index.md
documentation/doxygen/: Doxyfile  format_markdown_for_doxygen.sh  index.md  strip_triple_dash_sections.py
documentation/ford/: index.md
documentation/ford/css/: site-wide.css
documenting/: index.md
documenting/doxygen/: index.md
documenting/ford/: index.md
formatting/: README.md  fortitude.md  fortitude.toml  fortls.md  index.md
formatting/fortitude/: README.md  fortitude.toml  index.md
formatting/prek/: index.md
game-of-life/: fpm.toml  index.md
game-of-life/src/: game_of_life.f90
game-of-life/test/: CMakeLists.txt  Makefile
gh-pages/: _config.yml
poisson-solver/: README.md  build.sh  fpm.toml
poisson-solver/src/mesh_generator/: main.f90  mesh_generator.f90
poisson-solver/src/poisson/: poisson.f90
poisson-solver/testing/data/: square_mesh_10_5  square_mesh_15_5
poisson-solver/testing/pFUnit/: testSuites.inc  test_calculate_mesh_parameters.pf
poisson-solver/testing/test-drive/: CMakeLists.txt  index.md  main.f90  test_mesh_generator.f90  test_poisson.f90
poisson-solver/testing/veggies/: index.md  main.f90  test_mesh_generator.f90  test_poisson.f90  test_poisson_given_when_then.f90
profiling/pprof/: README.md  run_profile.sh
scripts/: build-pfunit.sh
src/mesh_generator/: generate_mesh.f90  main.f90  mesh_generator.f90
src/poisson/: main.f90  poisson.f90  solve_mesh.f90
testing/: README.md  index.md
testing/data/: square_mesh_10_5
testing/garden/: main.f90  mesh_parameters_inout_m.f90  test_mesh_generator.f90  test_poisson.f90
testing/pFUnit/: CMakeLists.txt  README.md  hello.pf  index.md  testSuites.inc  test_calculate_mesh_parameters.pf
testing/test-drive/: CMakeLists.txt  README.md  index.md  main.f90  test_calculate_mesh.f90  test_calculate_mesh_parameters.f90  test_drive_test_suite.f90  test_mesh_generator.f90  test_poisson.f90  test_skip_test.f90
testing/veggies/: README.md  index.md  main.f90  test_mesh_generator.f90  test_poisson.f90  test_poisson_given_when_then.f90  veggies_test_suite.f90
